
// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = 'proto2';

package github.com.openshift.api.autoscaling.v1beta1;

import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "v1beta1";

// CrossVersionObjectReference identifies another object by name, API version,
// and kind.
message CrossVersionObjectReference {
  // APIVersion defines the versioned schema of this representation of an
  // object. Servers should convert recognized schemas to the latest internal
  // value, and may reject unrecognized values. More info:
  // http://releases.k8s.io/HEAD/docs/devel/api-conventions.md#resources
  optional string apiVersion = 1;

  // Kind is a string value representing the REST resource this object
  // represents. Servers may infer this from the endpoint the client submits
  // requests to. Cannot be updated. In CamelCase. More info:
  // http://releases.k8s.io/HEAD/docs/devel/api-conventions.md#types-kinds
  // +kubebuilder:validation:MinLength=1
  optional string kind = 2;

  // Name specifies a name of an object, e.g. worker-us-east-1a.
  // Scalable resources are expected to exist under a single namespace.
  // +kubebuilder:validation:MinLength=1
  optional string name = 3;
}

// MachineAutoscaler targets machine-api managed machines for autoscaling.
//
// +kubebuilder:subresource:status
// +kubebuilder:printcolumn:name="Ref Kind",type="string",JSONPath=".spec.scaleTargetRef.kind",description="Kind of object scaled"
// +kubebuilder:printcolumn:name="Ref Name",type="string",JSONPath=".spec.scaleTargetRef.name",description="Name of object scaled"
// +kubebuilder:printcolumn:name="Min",type="integer",JSONPath=".spec.minReplicas",description="Min number of replicas"
// +kubebuilder:printcolumn:name="Max",type="integer",JSONPath=".spec.maxReplicas",description="Max number of replicas"
// +kubebuilder:printcolumn:name="Age",type="date",JSONPath=".metadata.creationTimestamp",description="MachineAutoscaler resoruce age"
message MachineAutoscaler {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  // Specification of constraints of a scalable resource
  optional MachineAutoscalerSpec spec = 2;

  // Most recently observed status of a scalable resource
  optional MachineAutoscalerStatus status = 3;
}

// MachineAutoscalerList contains a list of MachineAutoscaler resources.
message MachineAutoscalerList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated MachineAutoscaler items = 2;
}

// MachineAutoscalerSpec represents the desired state of a MachineAutoscaler.
message MachineAutoscalerSpec {
  // MinReplicas constrains the minimal number of replicas of a scalable resource
  // +kubebuilder:validation:Minimum=0
  optional int32 minReplicas = 1;

  // MaxReplicas constrains the maximal number of replicas of a scalable resource
  // +kubebuilder:validation:Minimum=1
  optional int32 maxReplicas = 2;

  // ScaleTargetRef holds reference to a scalable resource
  optional CrossVersionObjectReference scaleTargetRef = 3;
}

// MachineAutoscalerStatus defines the observed state of a MachineAutoscaler.
message MachineAutoscalerStatus {
  // LastTargetRef holds reference to the recently observed scalable resource
  optional CrossVersionObjectReference lastTargetRef = 1;
}

